# ailoy

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE.md  NOTICE.md  README.md  index.html  sitemap.xml  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yaml  build-macos.yaml  build-python-macos.yaml  build_node_linux.yaml  build_node_macos.yaml  build_node_windows.yaml  build_python_linux.yaml  build_python_macos.yaml  build_python_windows.yaml  deploy-docs.yaml  test-deploy-docs.yaml
assets/css/: styles.4a6ae44b.css
assets/js/: 01a85c17.240bc1ec.js  118010b8.79533410.js  17896441.3359968c.js  1df93b7f.4d4cf12f.js  1f391b9e.1a11f37a.js  21aea1ef.b48b4450.js  2674f9e6.a1ae5e06.js  336b8b61.8d6ccc82.js  33fc5bb8.120e1deb.js  36994c47.b4262719.js  393be207.4b6a1b78.js  3daf2178.282c82f2.js  404e2c97.47b55dc5.js  404e2c97.8e362e8a.js  404e2c97.d1f46a80.js  42.eff46b1d.js  51d0a870.92aea472.js  52203a0d.5b297fa5.js  52ac253c.c0185922.js  5c155e03.a93d0411.js  5e95c892.d4abf576.js  6115c2fc.8e606a39.js  621db11d.72104868.js  622.666c7702.js  63001522.ebc37830.js  661.503e15e5.js  6676e595.660aed47.js  6875c492.c7f6fb05.js  6b3e3b9d.805bebef.js  6b3e3b9d.88585502.js  6bb49daa.1a869b67.js  6d312df7.1694bd8f.js  6d312df7.caa715ca.js  814f3328.15937bdd.js  814f3328.4aa83fbc.js  8a06306c.50722fbb.js  9a35607e.68912151.js  9e4087bc.a8f1555b.js  a55c8b1c.4df179a1.js  a6aa9e1f.1debf45e.js  (+23 more)
bindings/js-node/: .gitignore  .mocharc.json  .npmignore  .prettierrc.json  CMakeLists.txt  README.md  build-cmakejs.js  build-napi.js  build-prebuild.js  build.js  package-lock.json  package.json  prepack.js  rollup.config.js  tsconfig.build.json  tsconfig.json
bindings/js-node/cmake/: libignore_Linux_x86_64.txt  libignore_Windows_AMD64.txt
bindings/js-node/csrc/: binding.cpp  js_broker_client.hpp  js_ndarray.hpp  js_thread_safe_promise.hpp  js_value_converters.hpp
bindings/js-node/src/: agent.ts  ailoy_addon.node.d.ts  index.ts  postinstall.js  presets  reflective_executor.ts  runtime.ts  vector_store.ts
bindings/js-node/src/cli/: index.ts  model.ts
bindings/js-node/tests/: agent.spec.ts  index.spec.ts
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
bindings/python/ailoy/: __init__.py  agent.py  reflective_executor.py  runtime.py  vector_store.py
bindings/python/csrc/: binding.cpp  py_value_converters.hpp
bindings/python/tests/: test_0_runtime_sync.py  test_1_runtime_async.py  test_2_agent.py  test_runtime.py
bindings/python/tests/agent/: test_mcp_tools.py
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/authors/jhlee/: index.html
blog/authors/oceanjoon/: index.html
blog/introducing-ailoy/: index.html
blog/tags/: index.html
broker/: CMakeLists.txt
broker/include/: broker.hpp  broker_client.hpp
broker/src/: broker.cpp  broker_client.cpp
broker/tests/: test_broker.cpp
cmake/: ailoyConfig.cmake.in
core/: CMakeLists.txt
core/include/: exception.hpp  inproc_socket.hpp  logging.hpp  object.hpp  packet.hpp  thread.hpp  uuid.hpp  value.hpp
core/src/: exception.cpp  inproc_socket.cpp  logging.cpp  packet.cpp  thread.cpp  uuid.cpp  value.cpp
core/tests/: test_inproc_socket.cpp  test_packet.cpp  test_value.cpp
docs/: .prettierrc.json  README.md  docusaurus.config.ts  package-lock.json  package.json
docs/blog/: authors.yml  tags.yml
docs/src/: sidebars.ts
docs/src/css/: custom.css
examples/RogueWrite/: README.md  levels.py  play.py  pyproject.toml  settings.py  settings_en.py  settings_ko.py
examples/gradio_chatbot/: README.md  main.py  pyproject.toml
examples/movie_agent_js_node/: package-lock.json  package.json
examples/movie_agent_py/: __main__.py
examples/news_agent_js_node/: package-lock.json  package.json
examples/python/: common.py  mcp_github_agent.py  movie_agent.py  news_agent.py
examples/simple_rag_electron/: .gitignore  README.md  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.main.config.mts
examples/tool_sampler_js_node/: README.md  package-lock.json  package.json
examples/tool_sampler_python/: README.md  requirements.txt
markdown-page/: index.html
presets/tools/: calculator.json  nytimes.json  tmdb.json
pydocs/: index.html
pydocs/ailoy/: runtime.html  vector_store.html
tsdocs/: hierarchy.html
tsdocs/classes/: Agent.html  NDArray.html
tsdocs/functions/: bearerAutenticator.html  defineAgent.html  defineVectorStore.html  startRuntime.html
tsdocs/interfaces/: AgentResponseError.html  AgentResponseText.html  AgentResponseToolCall.html  AgentResponseToolResult.html  ToolDefinitionRESTAPI.html  ToolDefinitionUniversal.html  ToolDescription.html  VectorStoreRetrieveItem.html
tsdocs/types/: AgentResponse.html  ToolAuthenticator.html
vm/: CMakeLists.txt
vm/cmake/: mlc_llm.patch
vm/include/: component.hpp  language.hpp  module.hpp  vm.hpp
vm/src/: calculator.hpp  chromadb_vector_store.cpp  chromadb_vector_store.hpp  component.cpp  debug_module.cpp  default_module.cpp  file_util.cpp  file_util.hpp  http_request.cpp  http_request.hpp  language.cpp  language_module.cpp  module.cpp  ndarray_util.cpp  ndarray_util.hpp  openai.cpp  openai.hpp  split_text.cpp  split_text.hpp  string_util.cpp  string_util.hpp  vector_store.hpp  vm.cpp
vm/src/faiss/: faiss_vector_store.cpp  faiss_vector_store.hpp
vm/src/mlc_llm/: chat_template_engine.cpp  chat_template_engine.hpp  embedding_model.cpp  embedding_model.hpp  language_model.cpp  language_model.hpp  language_model_v2.cpp  language_model_v2.hpp  mlc_llm_engine.cpp  mlc_llm_engine.hpp  model_cache.cpp  model_cache.hpp  tokenizer.cpp  tokenizer.hpp  tvm_model.cpp  tvm_model.hpp
vm/tests/: test_calculator.cpp  test_chromadb_vector_store.cpp  test_component.cpp  test_debug_module.cpp  test_faiss_vector_store.cpp  test_http_request.cpp  test_langmodel_v2.cpp  test_model_cache.cpp  test_openai.cpp  test_split_text.cpp  test_tvm_embedding_model.cpp  test_tvm_language_model.cpp  test_vm.cpp
(+71 files in other folders)
